    thanks to Łukasz Stelmach for both the report and the patch
    (Closes: #803711).

  [ Samuel Thibault ]
  * Bump hurd kernel version.

  [ Vagrant Cascadian ]
  * bootscr.mainline_common: Prefer newer u-boot distro_bootpart variable.

  [ Cyril Brulebois ]
  * Cherry-pick the following changes by Steven Chamberlain from the
    jessie-kfreebsd branch.

  [ Steven Chamberlain ]
  * Improve reproducibility of debian-installer netboot images
    (Closes: #805321):
  * Add a new utility build/util/gen-tarball to make reproducible
    tarballs, and use it for:
    - netboot.tar.gz
    - debian-cd_info.tar.gz
    - the overall debian-installer-images tar.gz file.
  * Inhibit gzip timestamp in initrd.gz
  * Ensure SOURCE_DATE_EPOCH is exported throughout the build system,
    define it if unset, or fall back to 'now' if build/Makefile is
    directly invoked.

 -- Karsten Merker <merker@debian.org>  Wed, 28 Oct 2015 23:10:45 +0100

debian-installer (20151023) unstable; urgency=medium

  [ Samuel Thibault ]
  * Restore actually-used non-gtk speech synthesis entries
    - Otherwise netboot/gtk/mini.iso (which is gtk only) does not contain the
      speech entry.
    - Avoid including them on non-gtk netboot image, though.

  [ Cyril Brulebois ]
  * Bump linux kernel version from 4.1.0-2 to 4.2.0-1
  * Update translation-status for the release.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 23 Oct 2015 12:54:34 +0200

debian-installer (20150911) unstable; urgency=medium

  * Bump linux kernel version from 4.1.0-1 to 4.1.0-2
  * Update translation-status for the release.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 11 Sep 2015 00:58:26 +0200

debian-installer (20150828) unstable; urgency=medium

  [ Didier Raboud ]
  * In the syslinux menu tree:
    - Add syslinux machinery to use ifcpu64.c32 on multi-arch CDs, for CPU
      64-bit capability detection
    - Swap one-key shortcuts to let them access the graphical variants